# michelin-exporter

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
michelin_scraper/: __init__.py  __main__.py
reports/: place-matcher-corpus-report.md  place-matcher-strategy-scoring.md
tests/: fakes.py  test_checkpoint_store.py  test_cli_maps_help.py  test_console_sync_presenter.py  test_fetcher_retry.py  test_generic_source_sync_use_case.py  test_google_maps_driver.py  test_google_maps_search_freshness.py  test_google_maps_sync_writer.py  test_import_real_html_fixture_tool.py  test_level_selection.py  test_list_exists_robustness.py  test_list_name_matching.py  test_listing_page_sleep.py  test_listing_scope.py  test_maps_login_use_case.py  test_michelin_source_adapter.py  test_my_maps_note_formatter.py  test_my_maps_source_adapter.py  test_pagination.py  test_parsers.py  test_place_matcher.py  test_place_matcher_corpus.py  test_place_matcher_decision.py  test_place_matcher_strategy_evaluation.py  test_place_query_builder.py  test_progress_estimation.py  test_real_html_fixtures_google_maps.py  test_real_html_fixtures_michelin.py  test_row_router.py  test_scraper_offline.py  test_selector_rule_enforcement.py  test_sensitive_fixture_scanner.py  test_sync_page_handler.py  test_sync_pipeline.py  test_sync_progress.py  test_sync_resume_service.py  test_sync_use_case.py  test_target_resolver.py
tools/: import_real_html_fixture.py  scan_sensitive_fixtures.py  scan_sensitive_git_history.py  update_target_url_matrix.py
(+90 files in other folders)
