[project]
name = "michelin"
version = "0.1.0"
description = "Scrape Michelin Guide listings and sync restaurants to Google Maps lists."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "beautifulsoup4>=4.14.3,<5",
  "playwright>=1.55.0,<2",
  "requests>=2.32.5,<3",
  "typer>=0.23.1,<1",
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1.38.0,<2",
  "ruff>=0.14.0,<1",
]

[project.scripts]
michelin-scraper = "michelin_scraper.entrypoints.cli:app"

[build-system]
requires = ["hatchling>=1.28.0,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["michelin_scraper"]

[tool.ruff]
target-version = "py314"
line-length = 140

[tool.ruff.lint]
# Keep a low-noise baseline focused on correctness:
# - E + F catch syntax/name/import/runtime issues and pycodestyle style violations.
# - B (bugbear) adds likely-bug checks with low false-positive rate.
# - I enforces deterministic import ordering.
# - UP enforces modern Python syntax for the project's Python 3.14 baseline.
select = ["E", "F", "B", "I", "UP"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
include = ["michelin_scraper"]
reportCallIssue = "error"
reportArgumentType = "error"
reportOptionalMemberAccess = "error"
